hphp/test/zend/good/tests/classes/autoload_009.php.expectf

Catchable fatal error: Argument 1 passed to f() must be an instance of UndefClass, stdClass given in %s/autoload_009.php on line 6
